Issue: #FT-2961 SubTicket: #FT-3247 Component: Changes: 1. Grid Slider overlaps on Basemap Tool

--- a/TripfinderWeb/TripfinderWeb/Global/Css/page.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/page.less
@@ -40,6 +40,7 @@ body {
 		.right-page {
 			margin-left: 3px;
 			overflow: auto;
+			z-index: 1041;
 		}
 
 		.resize-handler {
